@@ -5,7 +5,7 @@
 ## Modified by:
 ## Created:     05/11/2006
 ## RCS-ID:      $Id$
-## Copyright:   (c) 2006-2007, 2009 Mattia Barbon
+## Copyright:   (c) 2006-2007, 2009-2010 Mattia Barbon
 ## Licence:     This program is free software; you can redistribute it and/or
 ##              modify it under the same terms as Perl itself
 #############################################################################
@@ -37,3 +37,12 @@ wxRichTextXMLHandler *  O_WXOBJECT
 wxRichTextHTMLHandler * O_WXOBJECT
 wxSymbolPickerDialog *  O_WXOBJECT
 wxRichTextStyleOrganiserDialog * O_WXOBJECT
+
+wxPrintData *           O_WXOBJECT
+wxPageSetupDialogData * O_WXOBJECT
+## no RTTI info for wxRichTextPrinting
+wxRichTextPrinting *    O_NON_WXOBJECT_THR
+wxRichTextHeaderFooterData * O_WXOBJECT_THR
+wxRichTextOddEvenPage   T_ENUM
+wxRichTextPageLocation  T_ENUM
+
