@@ -5,7 +5,7 @@
 ## Modified by:
 ## Created:     05/11/2006
 ## RCS-ID:      $Id$
-## Copyright:   (c) 2006-2009 Mattia Barbon
+## Copyright:   (c) 2006-2010 Mattia Barbon
 ## Licence:     This program is free software; you can redistribute it and/or
 ##              modify it under the same terms as Perl itself
 #############################################################################
@@ -14,6 +14,8 @@
 %typemap{wxFontWeight}{simple};
 %typemap{wxBitmapType}{simple};
 %typemap{wxPliRichTextStyleType}{simple};
+%typemap{wxRichTextOddEvenPage}{simple};
+%typemap{wxRichTextPageLocation}{simple};
 %typemap{const wxRichTextAttr&}{reference};
 %typemap{wxRichTextAttr&}{reference};
 %typemap{const wxRichTextRange&}{reference};
@@ -64,3 +66,12 @@
 %typemap{wxRichTextFormattingDialog*}{simple};
 %typemap{wxRichTextFileHandler*}{simple};
 %typemap{wxPlRichTextFileHandler*}{simple};
+%typemap{wxPrintData*}{simple};
+%typemap{const wxPrintData&}{reference};
+%typemap{const wxRichTextBuffer&}{reference};
+%typemap{wxRichTextPrinting*}{simple};
+%typemap{const wxPageSetupDialogData&}{reference};
+%typemap{wxPageSetupDialogData*}{simple};
+%typemap{wxRichTextHeaderFooterData*}{simple};
+%typemap{const wxRichTextHeaderFooterData&}{reference};
+
